# IIQC

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml
docs/: ProjectLayout.md
include/: CoordinateConverter.h  SemanticPC.h  Utils.h  common.h  config.h  pose6d.h
include/ICP/: ICPScale.cpp  ICPScale.h  RotationEstimationSVD.h  icp_solver.h
include/IQM_image/: IQM_image.h  YoloInference.cpp  YoloInference.h
include/IQM_octomap/: IQM_map.h  IQM_octree.h  IQM_octree_node.h
include/SfM/: camera.h  epipolarSolver.h  frame.h  initializer.h  map.h  mappoint.h  matcher.h  optimizer.h  pnpSolver.h  reconstructor.h  track.h  triangulator.h
include/Viewer/: viewer.h
include/flight_control/: captured_frame.h  captured_frame_collection.h  flight_mission_manager.h  viewpoint.h  waypoint.h  waypoints_mission.h
rviz/: iQC_rviz.rviz
scripts/: ifc_to_semantic_pc.py  individual_IQC.py  load_xml.py  plot_registration.py  reorganise_semantic_pc.py
src/: HelloWorld.cpp  IQM_octree.cpp
test/: Test_Eigen.cpp  Test_ICP_Solver.cpp  Test_IQM_image.cpp  Test_IQM_map.cpp  Test_IQM_octree.cpp  Test_SIFT.cpp  Test_SfM.cpp  Test_camera_pose.cpp  Test_castray.cpp  Test_coordinate_converter.cpp  Test_cpp.cpp  Test_cv_bridge.cpp  Test_cv_project.cpp  Test_frame_collection.cpp  Test_gimbal.cpp  Test_incremental_sfm.cpp  Test_opencv_sfm.cpp  Test_pangolin.cpp  Test_pcl.cpp  Test_point_cloud_alignment.cpp  Test_reconstructor.cpp  Test_sequential_sfm.cpp  Test_solve_SIM3.cpp  Test_waypoint_mission.cpp  image_blur_detection.cpp  test_mission_manager.cpp  test_orb_match.cpp
test/python_script/: Test_barycentric.py  Test_coco_2_yolo.py  Test_exposure_map.py  Test_feature_matching.py  Test_image_blur_map.py  Test_image_mask.py  Test_l515.py  Test_point_cloud.py  Test_repro.py  Test_yolo_bridge_segmentation.py
